--- a/css/global.css
+++ b/css/global.css
@@ -75,3 +75,22 @@ textarea {
     font-size: 80%;
   }
 }
+
+/*Scrollbar */
+::-webkit-scrollbar {
+  width: 12px;
+  background-color: var(--cor-primaria-2);
+}
+
+::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 5px grey;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: var(--cor-primaria-4);
+}
+
+::-webkit-scrollbar-thumb:hover,
+::-webkit-scrollbar-thumb:active {
+  background-color: var(--cor-primaria-5);
+}
