--- a/css/tela-inicial.css
+++ b/css/tela-inicial.css
@@ -1,3 +1,15 @@
+/*Google translate*/
+.goog-te-banner,
+.goog-te-banner-frame {
+  display: none !important;
+}
+div#google_translate_element div.goog-te-gadget-simple a.goog-te-menu-value span[style="color: rgb(118, 118, 118);"] {
+  display: none !important;;
+}
+body {
+  top: 0px !important;
+}
+
 /* Customização do fullpage.js */
 .fullpage-wrapper {
   transition: all 1s ease 0s !important;
@@ -85,6 +97,10 @@
     display: none;
   }
 }
+.dropdown-toggle::after {
+  content: none;
+}
+
 
 /* Landing Page */
 .s1 {
@@ -301,73 +317,74 @@ button:after {
   }
 }
 
-#container-arredondado{
+#container-arredondado {
   border-radius: 25px;
 }
 
-.testimonial-section{
+.testimonial-section {
   background: #ffffff;
   padding: 5% 0px;
   text-align: center;
   border-radius: 25px;
   border: 5px solid var(--cor-bg);
 }
-.testimonial-pics{
+.testimonial-pics {
   padding: 5% 0;
 }
 
-.testimonial-pics img{
+.testimonial-pics img {
   width: 105px;
   height: 105px;
   border-radius: 50%;
   margin: 0 2%;
   filter: grayscale(100%);
   border: 1px solid var(--cor-bg);
-  transition: .3s;
+  transition: 0.3s;
   box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
   cursor: pointer;
 }
 
-.testimonial-pics img:hover, .testimonial-pics img.active{
+.testimonial-pics img:hover,
+.testimonial-pics img.active {
   filter: none;
 }
 
-.testimonial{
+.testimonial {
   display: none;
 }
 
-.testimonial.active{
+.testimonial.active {
   display: block;
 }
 
 @media (max-width: 499px) {
-  .testimonial-pics img{
+  .testimonial-pics img {
     width: 75px;
     height: 75px;
   }
 }
 
-#img-feedback img{
+#img-feedback img {
   max-width: 90%;
 }
 
 /* Contato */
 
-.s4{
+.s4 {
   background-image: url("../img/wave2.svg");
   background-attachment: scroll;
   background-size: cover;
   height: 100%;
 }
 
-.s4 form{
+.s4 form {
   box-shadow: 0 0 20px rgba(0, 0, 0, 0.4);
   border: 5px solid var(--cor-bg);
   background-color: #ffffff;
   border-radius: 25px;
 }
 
-footer{
+footer {
   position: absolute;
   bottom: 0;
   width: 100%;
@@ -376,21 +393,18 @@ footer{
     var(--cor-primaria-2),
     var(--cor-primaria-4)
   );
-  box-shadow: 0 0 20px rgba(0, 0, 0, 0.4);
-
+  box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
 }
 
-.social-icons a{
+.social-icons a {
   font-size: 1.5em;
-  color: rgba(255,255,255,0.7);
+  color: rgba(255, 255, 255, 0.7);
   margin-right: 3%;
 }
 
-.social-icons a:last-child{
+.social-icons a:last-child {
   margin-right: 0;
 }
-.social-icons a:hover{
-  color: rgba(255,255,255);
+.social-icons a:hover {
+  color: rgba(255, 255, 255);
 }
-
-
