--- a/css/tela-principal.css
+++ b/css/tela-principal.css
@@ -33,6 +33,7 @@ a:hover{
   display: flex;
   position: fixed;
   top: 0;
+  z-index: 1000;
 }
 
 .wrapper .top_navbar .logo {
@@ -61,16 +62,7 @@ a:hover{
   align-items: center;
 }
 
-.wrapper .top_navbar .top_menu .home_link a {
-  display: block;
-  background: var(--cor-primaria-4);
-  color: #fff;
-  padding: 8px 15px;
-  border-radius: 3px;
-  display: none;
-}
 
-.wrapper .top_navbar .top_menu .home_link a:hover,
 .wrapper .top_navbar .right_info .icon_wrap:hover {
   background-color: var(--cor-bg);
   transition: 0.3s;
@@ -86,7 +78,7 @@ a:hover{
   background: #fff;
   color: var(--cor-primaria-4);
   border: 2px solid var(--cor-primaria-4);
-  margin: 0 5px;
+  margin: 0 1px;
   cursor: pointer;
 }
 
